Actualización últimos detalles

--- a/Ropa-Clima/front-end/login.html
+++ b/Ropa-Clima/front-end/login.html
@@ -41,7 +41,7 @@
                 <p class="auth-switch">
                 ¿No tienes cuenta? <a href="register.html" class="text-primary auth-link">Regístrate aquí</a>
                 </p>
-                <a href="index.html" class="text-primary auth-link">Entrar como invitado</a>
+                <a href="../index.html" class="text-primary auth-link">Entrar como invitado</a>
             </footer>
         </section>
     </main>
