--- a/Ropa-Clima/front-end/register.html
+++ b/Ropa-Clima/front-end/register.html
@@ -43,7 +43,7 @@
                 <p class="auth-switch">
                 ¿Ya tienes cuenta? <a href="login.html" class="text-primary auth-link">Inicia Sesión</a>
                 </p>
-                <a href="index.html" class="text-primary auth-link">Entrar como invitado</a>
+                <a href="../index.html" class="text-primary auth-link">Entrar como invitado</a>
             </footer>
         </section>
     </main>
