--- a/Ropa-Clima/index.html
+++ b/Ropa-Clima/index.html
@@ -14,7 +14,7 @@
     <main class="index-main">
         <header class="main-header index-header-sticky">
             <div class="header-logo">
-                <img src="/assets/Logo-Ropa-Clima.png" alt="Logo de Ropa Clima" width="55px">
+                <img src="assets/Logo-Ropa-Clima.png" alt="Logo de Ropa Clima" width="55px">
                 <h1 class="app-title">Ropa Clima</h1>
             </div>
             <div id="header-auth-actions" class="header-actions">
