--- a/Ropa-Clima/front-end/register.html
+++ b/Ropa-Clima/front-end/register.html
@@ -8,14 +8,14 @@
     <script src="auth.js" defer></script>
     
     <title>Ropa Clima</title>
-    <link rel="icon" type="image/png" href="/assets/Logo-Ropa-Clima-Sin-Fondo.png">
+    <link rel="icon" type="image/png" href="assets/Logo-Ropa-Clima-Sin-Fondo.png">
 
 </head>
 <body class="auth-body">
     <main>
         <section id="register-section" class="auth-card">
             <header class="auth-header">
-                <img src="/assets/Logo-Ropa-Clima.png" alt="Logo de Ropa Clima" width="80px">
+                <img src="assets/Logo-Ropa-Clima.png" alt="Logo de Ropa Clima" width="80px">
 
                 <div class="app-info">
                     <h1 class="h1 app-title">Ropa Clima</h1>
