--- a/Ropa-Clima/index.html
+++ b/Ropa-Clima/index.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/front-end/styles.css" rel="stylesheet">
+    <link href="front-end/styles.css" rel="stylesheet"> 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <script src="/front-end/script.js" defer></script>
+    <script src="front-end/script.js" defer></script>
     
     <title>Ropa Clima</title>
-    <link rel="icon" type="image/png" href="/assets/Logo-Ropa-Clima-Sin-Fondo.png">
+    <link rel="icon" type="image/png" href="assets/Logo-Ropa-Clima-Sin-Fondo.png">
 </head>
 <body class="index-body">
     <main class="index-main">
         <header class="main-header index-header-sticky">
             <div class="header-logo">
-                <img src="assets/Logo-Ropa-Clima.png" alt="Logo de Ropa Clima" width="55px">
+                <img src="assets/Logo-Ropa-Clima.png" alt="Logo de Ropa Clima" width="55px"> 
                 <h1 class="app-title">Ropa Clima</h1>
             </div>
             <div id="header-auth-actions" class="header-actions">
-                <a href="/front-end/register.html" class="button button-register anim">
+                <a href="front-end/register.html" class="button button-register anim"> 
                     <i class="i fas fa-user-plus"></i>Regístrar
                 </a>
-                <a href="/front-end/login.html" class="button button-login anim">
+                <a href="front-end/login.html" class="button button-login anim"> 
                     <i class="i fas fa-sign-in-alt"></i>Iniciar
                 </a>
             </div>
