--- a/Ropa-Clima/front-end/register.html
+++ b/Ropa-Clima/front-end/register.html
@@ -8,7 +8,7 @@
     <script src="auth.js" defer></script>
     
     <title>Ropa Clima</title>
-    <link rel="icon" type="image/png" href="./assets/Logo-Ropa-Clima-Sin-Fondo.png">
+    <link rel="icon" type="image/png" href="../assets/Logo-Ropa-Clima-Sin-Fondo.png">
 
 </head>
 <body class="auth-body">
