--- a/Ropa-Clima/front-end/login.html
+++ b/Ropa-Clima/front-end/login.html
@@ -15,7 +15,7 @@
     <main>
         <section id="login-section" class="auth-card">
             <header class="auth-header">
-                <img src="assets/Logo-Ropa-Clima.png" alt="Logo de Ropa Clima" width="80px">
+                <img src="../assets/Logo-Ropa-Clima.png" alt="Logo de Ropa Clima" width="80px">
                 <div class="app-info">
                     <h1 class="h1 app-title">Ropa Clima</h1>
                     <p class="app-tagline">¿Qué me pongo hoy?</p>
